--- a/style.css
+++ b/style.css
@@ -72,4 +72,15 @@ table{
         width: 95%;
         padding: 10px 5px;
     }
+   
+    .content h1{
+        font-size: 25px;
+    }
+    
+}
+
+@media(max-width: 360px){
+    .content h1{
+        font-size: 20px;
+    }
 }
